# MeshBBS

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
bbs/: application.py  component.py  config.py  constants.py  context.py  database.py  logger.py  main.py  meshbbs.service  meshtastic_client.py  models.py  session.py  version.py
bbs/assets/: oldsplash.txt  splash.txt
bbs/commands/: router.py
bbs/repositories/: bulletins.py  mail.py  users.py
bbs/services/: bulletins.py  mail.py  statistics.py  users.py
bbs/ui/: cli.py  meshtastic.py
config/: config.toml
docs/: architecture.md
tests/: test_bulletin_service.py  test_bulletins.py  test_database.py  test_router.py
